--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.6.0",
+    "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "vite": "^3.1.0"
   }
